# cargo-easy-dep

./: Cargo.toml  README.md
src/: main.rs
